Routing, Navbar, Registration, Login
Per quanto riguarda il front end mancano solo la pagina di creazione del TODO e di visualizzazione di quelli esistenti

--- a/src/app/features/home/components/home-container/home-container.component.html
+++ b/src/app/features/home/components/home-container/home-container.component.html
@@ -1,1 +1,3 @@
-<p>ToDO Home Works</p>
+<fin-ex-navbar-container [navbarTabs]="navbarTabList">
+</fin-ex-navbar-container>
+<router-outlet></router-outlet>
